[tool.poetry]
name = "explorer"
version = "0.1.0"
description = ""
authors = ["Cyberyen-squat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
flask-caching = "^2.1.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.26"
werkzeug = "^3.0.1"
wtforms = "^3.1.2"
flask-qrcode = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
